# manuskrip_nusantara_invenio

./: .invenio  Pipfile  README.md  celerybeat-schedule.db  docker-compose.full.yml  docker-services.yml  invenio.cfg
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
mvenv/: pyvenv.cfg
site/: .gitkeep  setup.cfg
site/manuskrip_invenio/: views.py  webpack.py
