
[metadata]
name = manuskrip-invenio

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    manuskrip_invenio_views = manuskrip_invenio.views:create_blueprint
invenio_assets.webpack =
    manuskrip_invenio_theme = manuskrip_invenio.webpack:theme
